Refactor to add ADTList instead of ArrayList