@@ -4,7 +4,6 @@
  * jig is used, it will simply smooth the edges of the wood
  */
 
-import java.util.ArrayList;
 
 /**
  * This class represents a Router, which will smooth the edges if used by itself, or can cut
@@ -22,11 +21,11 @@ public class Router extends Tool implements iCuttingTool{
   /**
    * Smooths the edges of a piece of wood.
    * @param wood the wood to be smoothed
-   * @return an ArrayList of size 1, with the piece of wood.
+   * @return an ADTList of size 1, with the piece of wood.
    */
   @Override
-  public ArrayList<Wood> cut(Wood wood, double size) {
-    ArrayList<Wood> piece = new ArrayList<>();
+  public ADTList<Wood> cut(Wood wood, double size) {
+    ADTList<Wood> piece = new ADTList<>();
     wood.makeSmooth();
     piece.add(wood);
     return piece;
@@ -37,17 +36,17 @@ public class Router extends Tool implements iCuttingTool{
    * @param wood the plywood to be cut
    * @param size the diameter of the circle desired
    * @param jig the jig to use (must be circleCut)
-   * @return an ArrayList of size 1 with the new Round.
+   * @return an ADTList of size 1 with the new Round.
    * @throws IllegalStateException if the diameter is larger than the length or width of the original
    * piece of wood
    */
   @Override
-  public ArrayList<Wood> cut(Wood wood, Jig jig, double size) throws IllegalStateException{
+  public ADTList<Wood> cut(Wood wood, Jig jig, double size) throws IllegalStateException{
     if (jig != Jig.circleCut){
       throw new IllegalStateException(Const.ERROR_INCOMPATIBLE_JIG);
     }
-    ArrayList<Wood> piece = new ArrayList<>(wood.cut(0, size, true, cutShape.rectToRound));
-    piece.getFirst().makeSmooth();
+    ADTList<Wood> piece = wood.cut(0, size, true, cutShape.rectToRound);
+    piece.get(0).makeSmooth();
     return piece;
   }
 }
